src/main/resources/contribuyentems-servicio-controlcpe-regenvios-backend-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: contribuyentems-servicio-controlcpe-regenvios-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: contribuyentems-servicio-controlcpe-regenvios-backend
  template:
    metadata:
      labels:
        name: contribuyentems-servicio-controlcpe-regenvios-backend
    spec:
      imagePullSecrets:
        - name: registrysunat
      nodeSelector:
        namespace: "contribuyente.registro.controlcpe.mige"
      containers:
        - image: integracion1-dr-local.artifactory.insi.sunat.peru/microservices/contribuyentems-servicio-controlcpe-regenvios-backend:1.0.2-0
          name: contribuyentems-servicio-controlcpe-regenvios-backend
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "400m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /config
              name: contribuyentems-servicio-controlcpe-regenvios-backend
            - mountPath: /etc/localtime
              name: tz-config
          ports:
            - containerPort: 7130
              protocol: TCP
            - containerPort: 17130
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 17130
            initialDelaySeconds: 50
            periodSeconds: 40
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 17130
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 20
            successThreshold: 1
      hostAliases:
        - ip: 192.168.56.194
          hostnames:
          - mdbcpesspp0.sunat.peru
        - ip: 192.168.56.194
          hostnames:
          - mdbcpesspp1.sunat.peru
        - ip: 192.168.56.194
          hostnames:
          - mdbcpesspp2.sunat.peru                  
        - ip: 192.168.56.195
          hostnames:
          - srvcpeseskafka01.sunat.peru
        - ip: 192.168.56.196
          hostnames:
          - srvcpeseskafka02.sunat.peru
        - ip: 192.168.56.197
          hostnames:
          - srvcpeseskafka03.sunat.peru
      volumes:
        - name: contribuyentems-servicio-controlcpe-regenvios-backend
          hostPath:
            # directory location on host
            path: /opt/sunat/microservices/config/contribuyentems-servicio-controlcpe-regenvios-backend
        - name: tz-config
          hostPath:
            path: /etc/localtime
